Added Media Query Stretch

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
           <li><a href="contact.html"class="topNavItem">Contact</a></li>
         </ul>
       </nav>
-      <img src="img/jumbo-about.png" alt="banner">
+      <img src="img/jumbo-about.png" alt="banner" class="banner">
 
       <div class="body-content underline">
         <div class="page-width-container">
