--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <li><a href="contact.html"class="topNavItem">Contact</a></li>
        </ul>
      </nav>
-     <img src="img/jumbo.jpg" alt="banner">
+     <img src="img/jumbo.jpg" alt="banner" class="banner">
         <section class="body-content underline">
             <div class="content-container">
                 <h2>The Future</h2>
